--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=ShopSwift-ecommerce
+server.port=8080
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ShopSwift_ecommerce
+spring.datasource.username=root
+spring.datasource.password=mahi@2210
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
