--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=ShopSwift-ecommerce
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ShopSwift_ecommerce
+spring.datasource.url=jdbc:mysql://localhost:3306/shopswift_ecommerce
 spring.datasource.username=root
-spring.datasource.password=mahi@2210
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=your_password
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-secreteJwtString=phegondev123456789phegondev123456789
+
+secretJwtString=mysupersecretjwtkey123456789012345
+
